--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,10 @@
             <artifactId>spring-kafka</artifactId>
             <version>3.0.0</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.liquibase</groupId>-->
+<!--            <artifactId>liquibase-core</artifactId>-->
+<!--        </dependency>-->
     </dependencies>
 
     <build>
